--- a/cover.html
+++ b/cover.html
@@ -21,6 +21,8 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <div class="py-2 d-none d-md-inline-block site-header"  id="activo" style="color:lightgrey"><a>Bienvenido/a:</a></span><span id="username" >nombre</span></div>
+        <a class="py-2 d-none d-md-inline-block" href="#" onclick=logout() style="color:lightgrey"> Cerrar Sesión</a>
         
       </div>
     </nav>
@@ -103,8 +105,17 @@
         <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
       </div>
     </footer>
+    <script type="text/javascript">
+      function actualizarNombre(){
+        var actualizo = localStorage.getItem("usuario");
+        document.getElementById("username").innerHTML = " "+ actualizo;
+      }
+      actualizarNombre();
+    </script>
+    
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
