--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                   <input id="user" type="text" name="usuario" value="" placeholder="Usuario" required>
                   <input id="pass" type="password" name="contraseña" value="" placeholder="Contraseña" required>
                   <input onclick=login() type="button"  id="boton" value="Ingresar" >
+                  <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
              </form>
         </div>
@@ -50,6 +51,7 @@
       </div>    
       <script src="js/init.js"></script>
       <script src="js/login.js"></script>
+      <script src="js/login google.js"></script>
       <script src="js/jquery-3.1.1.min.js"></script>
       <script src="js/main.js"></script>
   </body>
