--- a/products.html
+++ b/products.html
@@ -22,14 +22,53 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <div class="py-2 d-none d-md-inline-block site-header"  id="activo" style="color:lightgrey"><a>Bienvenido/a:</a></span><span id="username" >nombre</span></div>
+        <a class="py-2 d-none d-md-inline-block" href="#" onclick=logout() style="color:lightgrey"></i> Cerrar Sesión</a>
       </div>
     </nav>
     <main role="main" class="pb-5">
       <div class="text-center p-4">
-    <div class="container p-5">
-        <h2>Productos</h2>
-        <p class="lead">Los mejores autos del momento</p>
-    </div>
+          <h2>Productos</h2>
+          <p class="lead">Los Mejores autos del momento</p>
+      </div>
+    <div class="container">
+      <div class="row">
+          <div class="col text-right">
+              <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
+                  <label class="btn btn-light active" id="precioDesc" >
+                      <input type="radio" name="options" autocomplete="off" checked>Max-Min
+                  </label>
+                  <label class="btn btn-light" id="precioAsc" >
+                      <input type="radio" name="options" autocomplete="off">Min-Max
+                  </label>
+                  <label class="btn btn-light pl-1" id="Vend." title="Orden descendente por relevancia">
+                      <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Relevancia
+                  </label>
+              </div>
+          </div>
+      </div>
+      <div class="row justify-content-end">
+        <div class="col-md-6"></div>
+          <div class="col-md-6 col-sm-12 mb-1 container">
+            <div class="row container p-0 m-0">
+              <div class="col">
+                <p class="font-weight-normal text-right my-2">Precio</p>
+              </div>
+              <div class="col">
+                <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMin">
+              </div>
+              <div class="col">
+                <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMax">
+              </div>
+              <div class="col-3 p-0">
+                <div class="btn-group" role="group">
+                  <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
+                  <button class="btn btn-link btn-sm" id="clearRangeFilter">Limpiar</button>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
     <div class="row">
       <div class="list-group" id="prod-list-container">
       </div>
@@ -45,10 +84,21 @@
         <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
       </div>
     </footer>
+
+    <script type="text/javascript">
+      function actualizarNombre(){
+        var actualizo = localStorage.getItem("usuario");
+        document.getElementById("username").innerHTML = " "+ actualizo;
+      }
+      actualizarNombre();
+    </script>
+
     <div id="spinner-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/products.js"></script>
+    <script src="js/login.js">
+    </script>
   </body>
 </html>
