--- a/product-info.html
+++ b/product-info.html
@@ -38,11 +38,6 @@
     .score input:checked ~ label {
     color:orange;
     }
-    span{
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        font-weight: 400;
-        color: blue;
-    }
     </style>
 </head>
 
@@ -53,9 +48,14 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      <div class="py-2 d-none d-md-inline-block site-header"  id="activo" style="color:lightgrey"><a>Bienvenido/a:</a></span><span id="username" >nombre</span></div>
-      <a class="py-2 d-none d-md-inline-block" href="#" onclick=logout() style="color:lightgrey"></i> Cerrar Sesión</a>
+    <div class="dropdown">
+      <button class="btn btn-secondary dropdown-toggle" type="button" id="activo" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><a>Bienvenido/a:</a></span><span id="username" >nombre</span>
+      </button>
+      <div class="dropdown-menu" aria-labelledby="username">
+        <a class="dropdown-item" href="cart.html">Mi carrito</a>
+        <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+        <a class="dropdown-item" href="index.html">Cerrar sesion</a>
+      </div>
     </div>
   </nav>
   <main role="main">
@@ -151,10 +151,18 @@
       <div></div>
     </div>
   </div>
+  <script type="text/javascript">
+    function actualizarNombre(){
+      var actualizo = localStorage.getItem("usuario");
+      document.getElementById("username").innerHTML = " "+ actualizo;
+    }
+    actualizarNombre();
+  </script>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
