--- a/sell.html
+++ b/sell.html
@@ -31,15 +31,20 @@
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2 d-none d-md-inline-block" href="cover.html">Inicio</a>
-            <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-            <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-            <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-            <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-            <div class="py-2 d-none d-md-inline-block site-header"  id="activo" style="color:white"><a>Bienvenido/a:</a></span><span id="username" >nombre</span></div>
-            <a class="py-2 d-none d-md-inline-block" href="#" onclick=logout() style="color:white"></i> Cerrar Sesión</a>
+      <div class="container d-flex flex-column flex-md-row justify-content-between">
+        <a class="py-2 d-none d-md-inline-block" href="cover.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
+        <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
+        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="activo" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><a>Bienvenido/a:</a></span><span id="username" >nombre</span>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="username">
+          <a class="dropdown-item" href="cart.html">Mi carrito</a>
+          <a class="dropdown-item" href="my-profile.html">Mi perfil</a>
+          <a class="dropdown-item" href="index.html">Cerrar sesion</a>
         </div>
+      </div>
     </nav>
       <div class="container">
         <div class="text-center p-4">
