--- a/cart.html
+++ b/cart.html
@@ -174,16 +174,16 @@
             <div class="modal-body">
               <div class="container text-center">
                 <form>
-                <label for="ntarj" style="color: black;">Numero de Tarjeta:</label>
-                <input type="number" size="20" id="ntarj" required placeholder=""><br>
+                <label for="cardNumber" style="color: black;">Numero de Tarjeta:</label>
+                <input type="number" size="20" id="cardNumber" placeholder="" required><br>
                 <label for="cvv" style="color: black;" >CVV:</label>
                 <input type="number" size="3" id="cvv" placeholder="" required ><br>
-                <label for="venci" style="color: black;">Fecha de vencimiento:</label>
-                <input type="month" step="1" min="9-2020"id="venci" size="7" placeholder="" required><br>
-                <label for="nombre" style="color: black;">Nombre del Titular:</label>
-                <input type="text" size="20" id="nombre" placeholder="" required>
-                <label for="ci" style="color: black;">Cedula de Identidad:</label>
-                <input type="number" size="10" id="ci" placeholder="" required><br>
+                <label for="expire" style="color: black;">Fecha de Vencimiento:</label>
+                <input type="month" step="1" min="9-2020"id="expire" size="7" placeholder="" required><br>
+                <label for="name" style="color: black;">Nombre del Titular:</label>
+                <input type="text" size="20" id="name" placeholder="" required>
+                <label for="cedula" style="color: black;">Cedula de Identidad:</label>
+                <input type="number" size="10" id="cedula" placeholder="" required><br>
                 <button class="btn btn-primary" data-dismiss="modal">Cerrar</button>
               </form>
               </div>
